--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Tic Tac Toe</title>
   <meta charset="UTF8">
   <link href="styles.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
   <h1>Tic Tac Toe!</h1>
-  
+  <h2>Scores:</h2>
+
   <div id="board">
-    <button id="btn0"></button>
-    <button id="btn1"></button>
-    <button id="btn2"></button>
-    <button id="btn3"></button>
-    <button id="btn4"></button>
-    <button id="btn5"></button>
-    <button id="btn6"></button>
-    <button id="btn7"></button>
-    <button id="btn8"></button>
+    <button id="btn0" data-coord="0,0"></button>
+    <button id="btn1" data-coord="1,0"></button>
+    <button id="btn2" data-coord="2,0"></button>
+    <button id="btn3" data-coord="0,1"></button>
+    <button id="btn4" data-coord="1,1"></button>
+    <button id="btn5" data-coord="2,1"></button>
+    <button id="btn6" data-coord="0,2"></button>
+    <button id="btn7" data-coord="1,2"></button>
+    <button id="btn8" data-coord="2,2"></button>
   </div>
 
 </body>
