--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <h1>Tic Tac Toe!</h1>
   <h2>Scores:</h2>
+  <h3 id="scores"></h3>
 
   <div id="board">
     <button id="btn0" data-coord="0,0"></button>
