Add new-game button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <h1>Tic Tac Toe!</h1>
   <h2>Scores:</h2>
   <h3 id="scores"></h3>
+  <p>
+    <button id="new-game">New Game</button>
+    <button id="reset">Reset Players and Scores</button>
+  </p>
 
   <div id="board">
     <button id="btn0" data-coord="0,0"></button>
