Tidy up logic, compartmentalize functions

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </p>
   </div>
 
-  <form id="options" action="javascript:Game.submitOptions();">
+  <form id="options", action="javascript:PageDisplay.submitForm();">
     <p>Please enter the following options to play:</p>
     <label for="p1-name">Player 1 name: </label>
     <input type="text" id="p1-name" value="Player 1" required>
